RESOLVED FIXED310444
Fix CSS absolute positioning on MathML elements by adding missing updateLogicalHeight() calls
https://bugs.webkit.org/show_bug.cgi?id=310444
Summary Fix CSS absolute positioning on MathML elements by adding missing updateLogic...
Ahmad Saleem
Reported 2026-03-21 19:35:52 PDT
ssia - fixes one failing WPT and we didn't had coverage, so this adds test as well, which we fail as of right now (6 passes and 19 failures but Chrome passes all, while Firefox fail all of them, with this patch, we pass all 25 tests as well).
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-21 19:36:00 PDT
Ahmad Saleem
Comment 2 2026-03-21 19:37:34 PDT
Ahmad Saleem
Comment 3 2026-03-21 19:38:48 PDT
https://jsfiddle.net/6L40oqrm/ <- Test based on WPT test, which I added.
EWS
Comment 4 2026-05-08 11:17:50 PDT
Committed 312905@main (d45ee7b421a1): <https://commits.webkit.org/312905@main> Reviewed commits have been landed. Closing PR #61088 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.